--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <DOCTYPE! html>
 <html>
 <head>
-	<title></title>
+	<title>Sorting Cities</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<input class="city-input" type="text" placeholder="Search">
-<select class="filter-option">
-	<option value="Name">Filter by Name</option>
-	<option value="Landmark">Filter by Landmark</option>
-</select>
-<button class="ascending-descending-population-btn">Ascending/Descending Population</button>
+
+<div class="form-container">
+	<input class="city-input" type="text" placeholder="Search">
+	<select class="filter-option">
+		<option value="Name">Filter by Name</option>
+		<option value="Landmark">Filter by Landmark</option>
+	</select>
+	<button class="ascending-descending-population-btn">Ascending/Descending Population</button>
+</div>
+
 <div class="city-container"></div>
+
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
